fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
   font-weight: 200;
   font-style: normal;
 }
+/*2017–2018
+Alexis Faudot, Rémi Forte, Morgane Pierson, Rafael Ribas, Tanguy Vanlaeys, Rosalie Wagner*/
 
 @media(min-width:801px){
   .grid-container{
@@ -27,6 +29,7 @@
      gap: 10px;
  }   
 }
+
 *{scroll-behavior: smooth;
       font-size: 1.5rem;
       margin: 0;
@@ -57,14 +60,18 @@ header {
   padding-top: 2%;
 }
 
- h1{  
+
+h1{  
+      font-family: "Jersey 20", sans-serif;
+  font-weight: 200;
       text-align:center;
-      font-size: 5rem;
-      font-family: 'Jersey 20', sans-serif;
+      font-size: 5rem; 
+      margin-left: 0;
       background: #7EA6C4;
       src: url('/fonts/Jersey20-Regular.ttf');
+}
 
-    }
+ 
   body{background-color: #5e5e5e;}
    
   p{
